@@ -6,7 +6,7 @@
 
 typedef uint16_t upm_float;
 
-#define UPM_CONST_500  ((upm_float)0x88fa)
+#define UPM_CONST_500 ((upm_float)0x88fa)
 #define UPM_CONST_1000 ((upm_float)0x89fa)
 #define UPM_CONST_2000 ((upm_float)0x8afa)
 
